# encrypter

./: .gitignore  Encrypter.spec  README.md  installer.iss  pyproject.toml  requirements.txt
.github/workflows/: build-macos.yml  build.yml
src/: cli-encryption.py  encrypter.py  gui-encryption.py
